--- a/Report_Building_model.ipynb
+++ b/Report_Building_model.ipynb
@@ -1070,7 +1070,7 @@
    "id": "07e98f6e-2bf7-41c5-9d04-a1590cb97189",
    "metadata": {},
    "source": [
-    "As we can observed, the settling time for the second modified model is exactly the same as the original model. The radiative energy took the same time to move accross the wall because it has the same volume of materials. The time steo is also the same for both models, because, like we said before, the volume of materials is the same and the geometry of the model didn't change, so the same number of values need to be calculated. Therefore, the time step is the same. The impact of the color will have an impact on the temperature of our material (concrete) and the temperature inside the walls."
+    "As we can observed, the settling time for the second modified model is exactly the same as the original model. The radiative energy took the same time to move accross the wall because it has the same volume of materials. The time step is also the same for both models, because, like we said before, the volume of materials is the same and the geometry of the model didn't change, so the same number of values need to be calculated. Therefore, the time step is the same. The impact of the color will have an impact on the temperature of our material (concrete) and the temperature inside the walls."
    ]
   },
   {
@@ -1447,7 +1447,7 @@
    "id": "ad0392ba",
    "metadata": {},
    "source": [
-    "As observed in the table, the settling time has been reduced of approximately 300 seconds with the third modification. We can easily say that it is pretty much the same one. This can be explained by the fact that the model is the same expect that the geometry of the length of the room has been increased 10 times. The width of the wall are the same in the two models. Therefore, the thermal enery have to move accross the same resistance. This is why the reach of the steady-state is the same.\n",
+    "As observed in the table, the settling time has been reduced of approximately 300 seconds with the third modification. We can easily say that it is pretty much the same one. This can be explained by the fact that the model is the same expect that the geometry of the length of the room has been increased 10 times. The width of the wall are the same in the two models. Therefore, the thermal energy have to move accross the same resistance. This is why the reach of the steady-state is the same.\n",
     "For the timestep, we see that it has been increased around 3 times the original one. This is because the new room is now significantly bigger than the first model. It is clear that more data/values has been collected through the process of simulation. Consequently, the timestep has to be way higher for a faster running code."
    ]
   },
@@ -1464,7 +1464,7 @@
    "id": "8f489c8b",
    "metadata": {},
    "source": [
-    "For this varaint, the thermal capacity of the glass has been neglected. ![neglect_glass](Th-circuit-neglect-capacity-glass.svg)"
+    "For this variant, the thermal capacity of the glass has been neglected. ![neglect_glass](Th-circuit-neglect-capacity-glass.svg)"
    ]
   },
   {
@@ -2896,7 +2896,7 @@
    "id": "65903afc",
    "metadata": {},
    "source": [
-    "On those graphics, we observe that the indoor temperature is pretty much the same through the 6 days of observations. As we decided, the interior temperature during the day is controlled at 20°C, and is around 15°C during the night. The outdoor temperature is cooler during than the interior temperature. The outdoor temperature seems hotter during the day when the Etotal is at its peak of the day. This is why the indoor temperature is warmer half of the day. Otherwise, at night, the outside and inside temperatures are colder when the emissions are non-existant."
+    "On those graphics, we observe that the indoor temperature is pretty much the same through the 6 days of observations. As we decided, the interior temperature during the day is controlled at 20°C, and is around 15°C during the night. The outdoor temperature is cooler than the interior temperature. The outdoor temperature seems hotter during the day when the Etotal is at its peak of the day. This is why the indoor temperature is warmer half of the day. Otherwise, at night, the outside and inside temperatures are colder when the emissions are non-existant."
    ]
   },
   {
@@ -2904,7 +2904,7 @@
    "id": "499ba92c",
    "metadata": {},
    "source": [
-    "## Impact of the chosen period"
+    "## Impacts of the chosen period"
    ]
   },
   {
@@ -3281,7 +3281,7 @@
    "metadata": {},
    "source": [
     "As we can see in the graphs, the indoor temperature stays the same between 15°C during the night to 20°C during the day. The outdoor temperature is higher than the indoor temperature during the summer and the opposite during the winter.\n",
-    "The indoor temperature stays inside the limits we put during summer and winter, because we active the hvac system which is acting as a controller inside the room. The HVAC system provide thermic energy to the room in the winter to compensate the losses and takes out thermic energy in the room during the summer to compensate the gains. Therefore, the HVAC is positive during winter (heating mode) and negative during summer (climatisation mode)."
+    "The indoor temperature stays inside the limits we put during summer and winter, because we active the hvac system which is acting as a controller inside the room. The HVAC system provides thermic energy to the room in the winter to compensate the losses and takes out thermic energy in the room during the summer to compensate the gains. Therefore, the HVAC is positive during winter (heating mode) and negative during summer (climatisation mode)."
    ]
   },
   {
@@ -3297,7 +3297,7 @@
    "id": "3f3d154c",
    "metadata": {},
    "source": [
-    "The next section of the project detailed a scenario with people inside the room. In this situation, the room is an office space occupied by a single person. The person is working in this room for a determined time during the day which is between 8AM and 5PM. During those hours, the person uses a computer and activates lights inside to work properly. A person emits around 65W/m2 when it is typing as an activity in an office according to table 5-1 of ASHRAE 55 2020. A computer consumes approximately 200W during its operation time which is during wok hours. On the other side, during the night, it only consumes [15W](https://energieplus-lesite.be/evaluer/bureautique2/Evaluer-la-consommation-des-equipements/evaluer-la-consommation-des-ordinateurs/?fbclid=IwAR1lOG8yHIUNBO_j38kE9MRzvUfoOfffBHFEi0eJdW3CvNhGY8Ix0mG4FsU). Also, during this time, the person uses some lights that consumes 8,8W/m2 according to table 4.2.1.5. of the National Energy Code of Canada for Buildings 2015 which can be use a reference. "
+    "The next section of the project detailed a scenario with people inside the room. In this situation, the room is an office space occupied by a single person. The person is working in this room for a determined time during the day which is between 8AM and 5PM. During those hours, the person uses a computer and activates lights inside to work properly. A person emits around 65W/m2 when it is typing as an activity in an office according to table 5-1 of ASHRAE 55 2020. A computer consumes approximately 200W during its operation time which is during work hours. On the other side, during the night, it only consumes [15W](https://energieplus-lesite.be/evaluer/bureautique2/Evaluer-la-consommation-des-equipements/evaluer-la-consommation-des-ordinateurs/?fbclid=IwAR1lOG8yHIUNBO_j38kE9MRzvUfoOfffBHFEi0eJdW3CvNhGY8Ix0mG4FsU). Also, during this time, the person uses some lights that consume 8,8W/m2 according to table 4.2.1.5. of the National Energy Code of Canada for Buildings 2015 which can be use as a reference. "
    ]
   },
   {
@@ -3494,9 +3494,9 @@
    "id": "a14af2bd",
    "metadata": {},
    "source": [
-    "IMPACT OF AUXILIARY SOURCES:\n",
-    "For this section, we analyze the impact of the auxiliary sources on the temperature and the heat flows. For this, we simulate only 6 days during winther (indoor temperature higher than outdoor temperature). The auxiliary heat sources modeled are humans, lights and computers. What we can analyse is that the indoor temperature seems to be higher than without the auxiliary sources. In fact, it was more between 15°C and 20°C. Now, with the new sources, the indoor temperature tends towards 17°C and 22°C. That is normal, because the new sources emit heat, so the temperature increase. \n",
-    "For the heat flows, we can see that the HVAC system provide more thermic energy in the model without auxiliary sources than the model with. Because the auxiliary sources emit thermic energy, the energy that the HVAC system needs to provide is therfore less."
+    "IMPACT OF AUXILIARY SOURCES :\n",
+    "For this section, we analyse the impact of the auxiliary sources on the temperature and the heat flows. For this, we simulate only 6 days during winter (indoor temperature higher than outdoor temperature). The auxiliary heat sources modeled are humans, lights and computers. What we can analyse is that the indoor temperature seems to be higher than without the auxiliary sources. In fact, it was more between 15°C and 20°C. Now, with the new sources, the indoor temperature tends towards 17°C and 22°C. That is normal, because the new sources emit heat, so the temperature increases. \n",
+    "For the heat flows, we can see that the HVAC system provides more thermic energy in the model without auxiliary sources than the model with. Because the auxiliary sources emit thermic energy, the energy that the HVAC system needs to provide is therfore less."
    ]
   },
   {
@@ -3805,14 +3805,14 @@
    "source": [
     "WINTER CONDITIONS - CONTROLLED MODEL:\n",
     "For the controlled model with the winter conditions, we can start by seeing that the interior temperature varies each day from 20°C during the day to 15°C during the night. This is normal, because the definition of having a controller is to decide what temperature you want inside your room. Therefore, the fact that the temperature is stable means that it is controlled by a thermostat by example. We can also see that the exterior temperature is inferior to the interior temperature. This is completely normal, and this represents, like in our case, winter conditions.\n",
-    "For the heat flows, we can see that, because the model is controlled, the HVAC system has a heat flows, because the HVAC has the objective to stabilize the temperature to the one designated. In this case, because we are in winter conditions, and therefore we are losing, often but not always like we can see, more thermic energy from conduction through the walls and the window than we are gaining thermic energy from the auxiliary sources and from the sun, the HVAC system need to compensate this lost by providing thermic energy inside the room. That is why the heat flows is in majority positive, and so we call that heating.\n",
+    "For the heat flows, we can see that, because the model is controlled, the HVAC system has a heat flow, because the HVAC has the objective to stabilize the temperature to the one designated. In this case, because we are in winter conditions, and therefore we are losing, often but not always like we can see, more thermic energy from conduction through the walls and the window than we are gaining thermic energy from the auxiliary sources and from the sun, the HVAC system needs to compensate this lost by providing thermic energy inside the room. That is why the heat flow is in majority positive, and so we call that heating.\n",
     "\n",
     "WINTER CONDITIONS - UNCONTROLLED MODEL:\n",
-    "For the uncontrolled model with the winter conditions, we can start by seeing that the interior temperature varies a lot during the simulation. This is normal, because the interior temperature is not fixed by a controller, so it can vary according to the loses and the gains in thermic energy from the different sources. We can also see that the exterior temperature is inferior to the interior temperature. This is completely normal, because the auxiliary sources, like the person working or the computer running, gives up heat in the room.\n",
-    "For the heat flows, we can see that, because the model is uncontrolled, the HVAC system has no heat flows. This is explained by the fact that because the objective of the HVAC is to stabilize the temperature to the one designated by the controller. Therefore, where there is no controller, the temperature, like we analyzed before, can vary and the HVAC system is not use.\n",
+    "For the uncontrolled model with the winter conditions, we can start by seeing that the interior temperature varies a lot during the simulation. This is normal, because the interior temperature is not fixed by a controller, so it can vary according to the losses and the gains in thermic energy from the different sources. We can also see that the exterior temperature is inferior to the interior temperature. This is completely normal, because the auxiliary sources, like the person working or the computer running, gives up heat in the room.\n",
+    "For the heat flows, we can see that, because the model is uncontrolled, the HVAC system has no heat flow. This is explained by the fact that because the objective of the HVAC is to stabilize the temperature to the one designated by the controller. Therefore, where there is no controller, the temperature, like we analysed before, can vary and the HVAC system is not used.\n",
     "\n",
     "CONCLUSION/COMPARAISON:\n",
-    "In conclusion, the fact of putting a controller on the interior temperature allow us to have a constant temperature during the day and the night. This is done by having a HVAC system that provide or remove thermic energy in the model to keep the temperature needed. Finally, we can see that in both model, the Etotal from the sun is the same, because this is independent from the fact that the temperature is controlled or not."
+    "In conclusion, the fact of putting a controller on the interior temperature allow us to have a constant temperature during the day and the night. This is done by having a HVAC system that provides or removes thermic energy in the model to keep the temperature needed. Finally, we can see that in both model, the Etotal from the sun is the same, because this is independent from the fact that the temperature is controlled or not."
    ]
   },
   {
@@ -4102,9 +4102,9 @@
    "id": "f1307d64-5f7e-4da1-a208-31a4f1d6b16f",
    "metadata": {},
    "source": [
-    "SUMMER CONDITIONS - CONTROLLED MODEL:\n",
+    "SUMMER CONDITIONS - CONTROLLED MODEL :\n",
     "For the controlled model with the summer conditions, we can start by seeing that the interior temperature varies each day from 22°C during the day to 16°C during the night. This is normal, because the definition of having a controller is to decide what temperature you want inside your room. Therefore, the fact that the temperature is stable means that it is controlled by a thermostat by example. We can also see that the exterior temperature is superior to the interior temperature. This is completely normal, and this represents, like in our case, summer conditions.\n",
-    "For the heat flows, we can see that, because the model is controlled, the HVAC system has a heat flows, because the HVAC has the objective to stabilize the temperature to the one designated. In this case, because we are in summer conditions, and therefore we are gaining, often but not always like we can see, more thermic energy inside the room than we are losing outside the room, the HVAC system need to compensate this gain by extracting thermic energy inside the room. This is done by evacuating inside air that is hot and replacing it by air that has been cooled down. That is why the heat flows is in majority negative, and so we call that climatisation.\n",
+    "For the heat flows, we can see that, because the model is controlled, the HVAC system has a heat flow, because the HVAC has the objective to stabilize the temperature to the one designated. In this case, because we are in summer conditions, and therefore we are gaining, often but not always like we can see, more thermic energy inside the room than we are losing outside the room, the HVAC system need to compensate this gain by extracting thermic energy inside the room. This is done by evacuating inside air that is hot and replacing it by air that has been cooled down. That is why the heat flows is in majority negative, and so we call that climatisation.\n",
     "\n",
     "SUMMER CONDITIONS - UNCONTROLLED MODEL:\n",
     "For the uncontrolled model with the summer conditions, we can start by seeing that the interior temperature varies a lot during the simulation. This is normal, because the interior temperature is not fixed by a controller, so it can vary according to the loses and the gains in thermic energy from the different sources. We can also see that the exterior temperature is inferior to the interior temperature. This is completely normal, because the auxiliary sources, like the person working or the computer running, gives up heat in the room.\n",
@@ -4127,7 +4127,9 @@
    "id": "5de47b4e-a64c-406b-bc85-c9052170fc12",
    "metadata": {},
    "source": [
-    "TO BE DONE"
+    "TO BE DONE\n",
+    "\n",
+    "Parler de la V1 --> augmenter épaisseur isolation --> augmente settling time donc temps de réponse du cube --> inertie thermique"
    ]
   }
  ],
