--- a/ReportProject_ThermalModel.ipynb
+++ b/ReportProject_ThermalModel.ipynb
@@ -454,7 +454,7 @@
    "id": "dfe56ab1-52db-471a-a3a0-13d1cc3ba3f9",
    "metadata": {},
    "source": [
-    "As a second modification, we decide to change the short wave absorptivity of the concrete. The absorptivity in the inital model was 0,25. Now, it has been change to 0,6. It means that the surface of the material is darker than the original one. The value of 0,6 is the normal absoprtivity of concrete."
+    "As a second modification, we decide to change the short wave absorptivity of the concrete. The absorptivity in the inital model was 0,25. Now, it has been change to 0,6. It means that the surface of the material is darker than the original one. The value of 0,6 is the normal absoprtivity of concrete while 0,25 was the absorptivity of the concrete paint in white."
    ]
   },
   {
@@ -700,7 +700,7 @@
    "id": "115e4f19-efcd-455d-9cc3-e6f654ad2dbe",
    "metadata": {},
    "source": [
-    "As observed in the table, the settling time has been reduced of approximately 300 seconds with the third modification. We can easily say that it is almost the same one. This can be explained by the fact that the model is the same expect that the geometry of the length of the room has been increased ten times. The width of the wall is the same in the two models. Therefore, the thermal energy has to move across the same resistance. This is why the reach of the steady-state is the same. For the timestep, we see that it has been increased around 3 times the original one. This is because the new room is now significantly bigger than the first model. More data/values have been collected through the process of simulation. Consequently, the timestep must be higher for a faster running code. "
+    "As observed in the table, the settling time is pratically the same for both models. This can be explained by the fact that the model is the same expect that the geometry of the length of the room has been increased. The width of the wall is the same in the two models. Therefore, the thermal energy has to move across pratically the same resistance. The only thing that increased is the amount of air in the room that has a thermal capacity that can absorb energy. This is why the reach of the steady-state is the same. For the timestep, we see that it has been increased around 3 times the original one. This is because the new room is now significantly bigger than the first model. More data/values have been collected through the process of simulation. Consequently, the timestep must be higher for a faster running code. "
    ]
   },
   {
@@ -836,7 +836,7 @@
    "id": "0e7c9a4c-fc31-4eba-932f-d07838b6dea1",
    "metadata": {},
    "source": [
-    "We observe that the settling time is almost constant, the thermal capacity of the glass has no influence on it. However, the time step has increased by 180s. This is due to the fact that we neglect the part of the solar radiation that is absorbed by the glass. Thus, the simulation has less information to take into account, it is a simpler model.  "
+    "We observe that the settling time is almost constant, the thermal capacity of the glass has no a lot of influence on it, because the capacity and the volume of the glass is neglegible compared to the capacity and volume of the air and the walls. However, the time step has increased by 180s. This is due to the fact that we neglect the part of the solar radiation that is absorbed by the glass. Thus, the simulation has less information to take into account, it is a simpler model.  "
    ]
   },
   {
@@ -986,9 +986,10 @@
    "id": "057a8b0a-94fc-4dd5-9eab-55f29298727e",
    "metadata": {},
    "source": [
-    "In conclusion, different modifications were applied on a certain initial model. After changing the insulation's width, the color of concrete, the length of the walls, we observe that the width of insulation has the biggest impacts on the time to reach steady-state. On the contrary, the wall length didn't change a thing to it as the model remain almost the same.\n",
+    "In conclusion, different modifications were applied on a certain initial model. What we can observe is that the time to reach steady-state is influenced by the quantity of the resistance in the model. The higher the resistance of the model, the longer the thermal energy takes to travel and reaches the settling time. Therefore, the addition of insulation increases the settling time, because the resistivity of the model also increased. Lengthening the walls has a small impact, because it adds air in our model that has a small resistance and a small capacity compared to the walls. When we neglect the capacity of the air and the glass, the impact on the settling time is also minimal, because their capacities and resistances are small in comparison of the walls. Finally, changing the color of the concrete has zero impact on the settling time, because this modification doesn't change the resistance or the capacity of the model.\n",
     "\n",
-    "The timestep of the 3 first variantes were almost the same as the original one. It is hard to provide a real difference between all of them. Nevertheless, when we neglect the thermal capacity of the glass (Variante 4) or both of the glass and air (Variante 5), the time step increases. The model is simpler with less information to treat as with this simplification, these two materials don’t store energy. There is less important information between two time steps. After neglecting air and glass thermal capactities, we can conclude that they generate way less values as the timesteps increase a lot contrary to settling time."
+    "For the timestep, we found that this is usally linked with the number of values that the software needs to analyse. When the models is bigger or more complex, the number of datas or values that has to be calculed is higher, and therefore the timestep is going to be higher to have a model that runs smoothly for not too long. Therefore, increasing the length of the walls has a big impact on the timestep, because much more datas have to be calculated. \n",
+    "In the other hand, we also saw that that when we neglect the thermal capacity of the glass (Variante 4) or both of the glass and air (Variante 5), the time step increases also. The model is simpler with less information to treat as with this simplification, these two materials don’t store energy. Therefore, we suppose that the software does a optimization of the timestep, because less information has to be analysed."
    ]
   },
   {
@@ -1466,7 +1467,7 @@
    "id": "b7210c02-5def-4154-9f96-da42b996fe01",
    "metadata": {},
    "source": [
-    "COMMENTAIRE A FAIRE SUR QHAV OU LES CREUX DEVIENNENT DES BOSSES"
+    "It is good to see at the beginning that the interior temperature follows the same curve in both model. Therefore, the HVAC system in both models acts correctly by controlling the temperature as desired. In the model without auxiliary sources, we can see that the heat flows provided by the HVAC system is higher than the model with auxiliary sources during the day. This can be easily explain by the fact that, because the auxiliay sources brings heat inside the room, this reduce the quantity of heat that the HVAC system needs to bring, and therefore the heat flows is lower. This is normal, because we are in winter conditions, so the HVAC system brings heat inside."
    ]
   },
   {
