Modif légende Lara

--- a/ReportProject_ThermalModel.ipynb
+++ b/ReportProject_ThermalModel.ipynb
@@ -1300,6 +1300,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a50e4983",
+   "metadata": {},
+   "source": [
+    "> Figure 4. Simulation in free-running with weather data using Euler explicit method of integration. a) Indoor and outdoor temperatures. b) Solar and HVAC heat flow rates."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a916fba2-d785-4757-baa4-7179f121f0fd",
    "metadata": {},
    "source": [
@@ -1355,6 +1363,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "36bee052",
+   "metadata": {},
+   "source": [
+    ">Figure 5. Simulation in free-running for winter weather a) Indoor and outdoor temperatures. b) Solar and HVAC heat flow rates."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "id": "350e9cb6-e295-4830-bf40-ce74863d3d35",
@@ -1384,6 +1400,14 @@
    ],
    "source": [
     "%run Part2summer.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1499750c",
+   "metadata": {},
+   "source": [
+    ">Figure 6. Simulation in free-running for summer weather a) Indoor and outdoor temperatures. b) Solar and HVAC heat flow rates."
    ]
   },
   {
@@ -1453,13 +1477,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "79b23379",
+   "metadata": {},
+   "source": [
+    ">Figure 7. Simulation in free-running with auxiliary heat sources a) Indoor and outdoor temperatures. b) Solar and HVAC heat flow rates."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "605c6c5f-b50f-41db-a2a2-19dce9e8e451",
    "metadata": {},
    "source": [
     "As a reminder, the graph of the inital simulation is:\n",
     "\n",
     "![summer](Inital_simulation.svg)\n",
-    "> Figure 3. Inital Simulation"
+    "> Figure 8. Inital Simulation"
    ]
   },
   {
@@ -1537,6 +1569,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "054bd123",
+   "metadata": {},
+   "source": [
+    ">Figure 9. Simulation for winter weather with auxiliary heat sources and controller a) Indoor and outdoor temperatures. b) Solar and HVAC heat flow rates.\n",
+    "\n",
+    ">Figure 10. Simulation for winter weather with auxiliary heat sources without controller a) Indoor and outdoor temperatures. b) Solar and HVAC heat flow rates."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2563b57b-58fd-4d92-965f-288474354be1",
    "metadata": {
     "tags": []
@@ -1598,6 +1640,16 @@
    ],
    "source": [
     "%run Part2summernocontrol.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8dcb884",
+   "metadata": {},
+   "source": [
+    ">Figure 11. Simulation for summer weather with auxiliary heat sources and controller a) Indoor and outdoor temperatures. b) Solar and HVAC heat flow rates.\n",
+    "\n",
+    ">Figure 12. Simulation for summer weather with auxiliary heat sources without controller a) Indoor and outdoor temperatures. b) Solar and HVAC heat flow rates."
    ]
   },
   {
