--- a/ReportProject_ThermalModel.ipynb
+++ b/ReportProject_ThermalModel.ipynb
@@ -1705,12 +1705,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "27d44fd5-4da6-4062-bed2-0f0e0a264253",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "[C. Ghiaus](https://cghiaus.github.io/dm4bem_book/tutorials/T01_Heat_transfer.html). Energy management in Building courses\n",
+    "\n",
+    "[ASHRAE (2021)](https://www.ashrae.org/file%20library/technical%20resources/standards%20and%20guidelines/standards%20addenda/55_2020_b_20210430.pdf). Thermal Environmental Conditions for Human Occupancy. ISSN 1041-2336 \n",
+    "\n",
+    "[Energie+](https://energieplus-lesite.be/evaluer/bureautique2/Evaluer-la-consommation-des-equipements/evaluer-la-consommation-des-ordinateurs/?fbclid=IwAR1lOG8yHIUNBO_j38kE9MRzvUfoOfffBHFEi0eJdW3CvNhGY8Ix0mG4FsU). Évaluer la consommation des ordinateurs\n",
+    "\n",
+    "[Canadian Commission on Building and Fire Codes National Research Council of Canada (2019)](https://publications.gc.ca/collections/collection_2022/cnrc-nrc/NR24-24-1-2015-eng.pdf). User’s Guide – National Energy Code of Canada for Buildings 2015. ISBN 0-660-25776-1"
+   ]
   }
  ],
  "metadata": {
